--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 hs_err_pid*
 replay_pid*
 Primeiro_Projeto_Java/.vscode/settings.json
+Escopo_e_Estruturas_de_Controle_em_Java/.vscode/settings.json
