iniciando novo modulo

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 replay_pid*
 Primeiro_Projeto_Java/.vscode/settings.json
 Escopo_e_Estruturas_de_Controle_em_Java/.vscode/settings.json
+Fundamentos_da_Programação_Orientada_a_Objetos_com_Java/.vscode/settings.json
