getters and setters

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ replay_pid*
 Primeiro_Projeto_Java/.vscode/settings.json
 Escopo_e_Estruturas_de_Controle_em_Java/.vscode/settings.json
 Fundamentos_da_Programação_Orientada_a_Objetos_com_Java/.vscode/settings.json
+Getter e Setters/.vscode/settings.json
+.gitignore
